# sklearn-instrumentation

./: .gitignore  .readthedocs.yml  CHANGELOG.rst  Makefile  README.rst  pyproject.toml
.github/workflows/: build.yml
docs/: class_instrumentation.rst  conf.py  configuration.rst  estimator_instrumentation.rst  index.rst  instance_instrumentation.rst  instrumentor.rst  package_instrumentation.rst  requirements.txt  utils.rst
docs/instrumentation/: custom.rst  logging.rst
docs/instruments/: base.rst  cprofile.rst  custom.rst  datadog.rst  logging.rst  memory_profiler.rst  opentelemetry.rst  prometheus.rst  pyinstrument.rst  statsd.rst
examples/: class_instrumentation.py  cprofiler.py  iris.py  memory_profiler_.py  profiler.py  prometheus.py  pyinstrument_.py  statsd_.py
sklearn_instrumentation/: __init__.py  config.py  instrumentor.py  testing.py  types.py  utils.py
sklearn_instrumentation/instrumentation/: __init__.py  logging.py
sklearn_instrumentation/instruments/: base.py  cprofile.py  datadog.py  logging.py  memory_profiler.py  opentelemetry.py  prometheus.py  pyinstrument.py  statsd.py
tests/: conftest.py  test_instrumentor.py  test_utils.py
tests/instrumentation/: conftest.py  test_logging.py
tests/instruments/: test_cprofile.py  test_datadog.py  test_logging.py  test_memory_profiler.py  test_opentelemetry.py  test_prometheus.py  test_pyinstrument.py  test_statsd.py
